adding patched game.php for SQLI vulnerability in lid parameter.
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/flashgames/trunk@5301 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+31-09-2008
+
+- added patched game.php to address SQLInjection Vulnerability in lid parameter.
+
 10-13-2005
  - Fixes for AI service support
 
